[gd_scene load_steps=4 format=3 uid="uid://dlbpqwf70tpg4"]

[ext_resource type="Script" uid="uid://ha4hyb2hftw4" path="res://scripts/screens/start_screen.gd" id="1_o7i0r"]
[ext_resource type="PackedScene" uid="uid://bibasatxhl56l" path="res://scenes/pixel_label.tscn" id="1_tx5wa"]
[ext_resource type="Texture2D" uid="uid://10alsdvxmo46" path="res://assets/Ekran powitalny.png" id="3_qw0xr"]

[node name="StartScreen" type="Control"]
custom_minimum_size = Vector2(1366, 768)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_o7i0r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = 0.267822
offset_bottom = -1.0
color = Color(0.290196, 0.47451, 1, 0)

[node name="PixelLabel" parent="ColorRect" instance=ExtResource("1_tx5wa")]
layout_mode = 0
offset_left = 471.0
offset_top = 131.0
offset_right = 896.0
offset_bottom = 211.0
theme_override_font_sizes/font_size = 80
text = "Spellbook"
font_scale = 10

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 426.0
offset_top = 599.0
offset_right = 614.0
offset_bottom = 667.0
color = Color(0, 0.396064, 0.907897, 1)

[node name="Button" type="Button" parent="ColorRect"]
self_modulate = Color(1, 1, 1, 0.388235)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.310962
anchor_top = 0.780831
anchor_right = 0.448962
anchor_bottom = 0.869831
offset_left = 0.292969
offset_top = 0.102966
offset_right = -0.629028
offset_bottom = -0.160004
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="PixelLabel" parent="ColorRect/Button" instance=ExtResource("1_tx5wa")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 24.0
offset_right = -65.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Sign in"
font_scale = 3

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 752.0
offset_top = 598.0
offset_right = 940.0
offset_bottom = 668.0
color = Color(0, 0, 0, 0.607843)

[node name="HowToPlay" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.549092
anchor_top = 0.780831
anchor_right = 0.687092
anchor_bottom = 0.869831
offset_left = 0.292969
offset_top = 0.102966
offset_right = -0.629028
offset_bottom = -0.160004
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="PixelLabel" parent="ColorRect/HowToPlay" instance=ExtResource("1_tx5wa")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 24.0
offset_right = -65.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "How to play"
font_scale = 3

[node name="Background" type="Sprite2D" parent="ColorRect"]
z_index = -1
position = Vector2(683, 384)
texture = ExtResource("3_qw0xr")

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/HowToPlay" to="." method="_on_how_to_play_pressed"]
